--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
       margin: 0;
       font-family: 'Poppins', sans-serif;
     }
+
+    body {
+      background-color: #F0F0F0;
+    }
   </style>
   <title>Waldenberger Shop</title>
 </head>
